--- a/car_cw2/car_cw2.ipynb
+++ b/car_cw2/car_cw2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:509432d7652db32dc1b8460ada970ca2d4231426741ba977a2d6f6e7bded3b6f"
+  "signature": "sha256:c3be1032444bfe2e747318f260d973d8e542fe184e78c69c691aa3c17c7e5d57"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -12,8 +12,71 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "# Computer Architecture Assignment 2"
+      "<center>Mark Nemec - s1140740 | Tutor: Boris Grot</center>\n",
+      "\n",
+      "# <center>Computer Architecture Assignment 1</center>"
      ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The purpose of this report is to describe the internal structure of the cache simulator built for this assignment and summarise the experiments performed on it. The language of my choice is Python. I implemented the cache in a function called `set_associative` in a file called `cache.py`.\n",
+      "\n",
+      "Furthermore, I wrote a `main` function which just opens the supplied file and runs the `set_associative` function on it and a helper generator function `parse` which loops over the lines of the file and yields the opcode, the tag, the index and the offset of the instruction. It also resets the file pointer after it exits the file loop.\n"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## Internal Structure and Workings of the Simulator\n",
+      "\n"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def set_associative(file, size=4096, block=32, sets=1):\n",
+      "    \"\"\"\n",
+      "    Simulates a set-associative cache.\n",
+      "        :param file: tracefile to be used for simulation\n",
+      "        :param size: size of the cache in bytes\n",
+      "        :param block: size of a block of memory\n",
+      "        :param sets: set-associativity\n",
+      "        :returns: total number of operations, missed number of operations\n",
+      "    \"\"\"\n",
+      "    cache = {}\n",
+      "    total = {'R': 0, 'W': 0}\n",
+      "    misses = {'R': 0, 'W': 0}\n",
+      "\n",
+      "    offset_size = int(log(block, 2))  # e.g. need 5 bits for 32 bytes\n",
+      "    index_size = int(log(size / block / float(sets), 2))\n",
+      "\n",
+      "    for op, tag, index, offset in parse(file, offset_size, index_size):\n",
+      "        total[op] += 1\n",
+      "\n",
+      "        if index not in cache:\n",
+      "            # not in cache - add it\n",
+      "            misses[op] += 1\n",
+      "            cache[index] = deque([tag], maxlen=sets)\n",
+      "        else:\n",
+      "            if tag not in cache[index]:\n",
+      "                # append to the end, LRU will be popped\n",
+      "                misses[op] += 1\n",
+      "                cache[index].append(tag)\n",
+      "            else:\n",
+      "                # not very efficient but simple\n",
+      "                cache[index].remove(tag)\n",
+      "                cache[index].append(tag)\n",
+      "\n",
+      "    return total, misses"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
