not using file var

--- a/car_cw2/car_cw2.ipynb
+++ b/car_cw2/car_cw2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:c3be1032444bfe2e747318f260d973d8e542fe184e78c69c691aa3c17c7e5d57"
+  "signature": "sha256:d11f6d8990f68e49a2b051eba21fc104829671a08af33c33ebb07384cb85f71c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -31,8 +31,49 @@
      "metadata": {},
      "source": [
       "## Internal Structure and Workings of the Simulator\n",
-      "\n"
+      "\n",
+      "### Parsing the file\n",
+      "\n",
+      "Below is the function used for parsing the file. As arguments it takes the file used"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def parse(file, offset_size, index_size):\n",
+      "    \"\"\"\n",
+      "    Generator that parses a given file.\n",
+      "        :param file: file to parse.\n",
+      "        :param offset_size: number of bits used for the offset.\n",
+      "        :param index_size: number of bits used for the index.\n",
+      "        :returns: quadruple of the operation (R|W), tag, index and offset.\n",
+      "    \"\"\"\n",
+      "    offset_mask = pow(2, offset_size) - 1\n",
+      "    index_mask = pow(2, index_size) - 1\n",
+      "\n",
+      "    for line in file:\n",
+      "        op, addr = line.split()\n",
+      "        addr = int(addr, 16)\n",
+      "\n",
+      "        # get offset with a bitmask then shift\n",
+      "        offset = addr & offset_mask\n",
+      "        addr = addr >> offset_size\n",
+      "\n",
+      "        # get index with a bitmask then shift\n",
+      "        index = addr & index_mask\n",
+      "        addr = addr >> index_size\n",
+      "\n",
+      "        # now only tag left\n",
+      "        tag = addr\n",
+      "\n",
+      "        yield op, tag, index, offset\n",
+      "\n",
+      "    file.seek(0)  # reset file pointer"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -41,10 +82,10 @@
       "def set_associative(file, size=4096, block=32, sets=1):\n",
       "    \"\"\"\n",
       "    Simulates a set-associative cache.\n",
-      "        :param file: tracefile to be used for simulation\n",
+      "        :param file: tracefile to be used for simulation.\n",
       "        :param size: size of the cache in bytes\n",
-      "        :param block: size of a block of memory\n",
-      "        :param sets: set-associativity\n",
+      "        :param block: size of a block of memory in bytes.\n",
+      "        :param sets: set-associativity.\n",
       "        :returns: total number of operations, missed number of operations\n",
       "    \"\"\"\n",
       "    cache = {}\n",
