updating the readme

--- a/car_cw2/car_cw2.ipynb
+++ b/car_cw2/car_cw2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d11f6d8990f68e49a2b051eba21fc104829671a08af33c33ebb07384cb85f71c"
+  "signature": "sha256:561d6275dd26871c3c74d8516f6769a94b859d77eab4acdac553ae2e5b3748d3"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -34,17 +34,17 @@
       "\n",
       "### Parsing the file\n",
       "\n",
-      "Below is the function used for parsing the file. As arguments it takes the file used"
+      "Below is the function used for parsing the file. As arguments it takes the file used, the size of the offset and the size of the index in bits. Using these sizes it creates the bitmasks used for getting out the offset, index and the tag."
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def parse(file, offset_size, index_size):\n",
+      "def parse(file_, offset_size, index_size):\n",
       "    \"\"\"\n",
       "    Generator that parses a given file.\n",
-      "        :param file: file to parse.\n",
+      "        :param file_: file to parse.\n",
       "        :param offset_size: number of bits used for the offset.\n",
       "        :param index_size: number of bits used for the index.\n",
       "        :returns: quadruple of the operation (R|W), tag, index and offset.\n",
@@ -52,7 +52,7 @@
       "    offset_mask = pow(2, offset_size) - 1\n",
       "    index_mask = pow(2, index_size) - 1\n",
       "\n",
-      "    for line in file:\n",
+      "    for line in file_:\n",
       "        op, addr = line.split()\n",
       "        addr = int(addr, 16)\n",
       "\n",
@@ -69,20 +69,21 @@
       "\n",
       "        yield op, tag, index, offset\n",
       "\n",
-      "    file.seek(0)  # reset file pointer"
+      "    file_.seek(0)  # reset file pointer"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def set_associative(file, size=4096, block=32, sets=1):\n",
+      "def set_associative(file_, size=4096, block=32, sets=1):\n",
       "    \"\"\"\n",
       "    Simulates a set-associative cache.\n",
-      "        :param file: tracefile to be used for simulation.\n",
+      "        :param file_: trace file to be used for simulation.\n",
       "        :param size: size of the cache in bytes\n",
       "        :param block: size of a block of memory in bytes.\n",
       "        :param sets: set-associativity.\n",
@@ -95,7 +96,7 @@
       "    offset_size = int(log(block, 2))  # e.g. need 5 bits for 32 bytes\n",
       "    index_size = int(log(size / block / float(sets), 2))\n",
       "\n",
-      "    for op, tag, index, offset in parse(file, offset_size, index_size):\n",
+      "    for op, tag, index, offset in parse(file_, offset_size, index_size):\n",
       "        total[op] += 1\n",
       "\n",
       "        if index not in cache:\n",
