hopefully last version

--- a/car_cw2/car_cw2.ipynb
+++ b/car_cw2/car_cw2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:dd25df51dea68af7f7070a3ca232ed994c8650ed041e5be16bc1ffec5596d6ba"
+  "signature": "sha256:4a121221bb9817707f731b66de7702182a04eda60ed3dab879841d09c2e5b37c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -12,9 +12,12 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<center>Mark Nemec - s1140740 | Tutor: Boris Grot</center>\n",
-      "\n",
-      "# <center>Computer Architecture Assignment 1</center>\n",
+      "---\n",
+      "title:  'Computer Architecture Assignment 2'\n",
+      "author:\n",
+      "- name: Mark Nemec\n",
+      "  affiliation: University of Edinburgh\n",
+      "---\n",
       "\n",
       "**Note**: I have been able to complete all the parts of the assignment."
      ]
@@ -32,9 +35,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## Internal Structure and Workings of the Simulator\n",
+      "# Internal Structure and Workings of the Simulator\n",
       "\n",
-      "### Parsing the file\n",
+      "## Parsing the file\n",
       "\n",
       "Below is the function `parse` used for parsing the file. As arguments it takes the file used, the size of the offset and the size of the index in bits. Using these sizes we create bitmasks which are later used on the addresses. For each line of the file we get the opcode and the address. Using our offset bitmask we extract the offset and then shift by the length of the offset. We do the same for the index and after we are done the address only contains the tag. At the end we reset the file pointer of `file_` so we can re-parse it."
      ]
@@ -44,13 +47,6 @@
      "collapsed": false,
      "input": [
       "def parse(file_, offset_size, index_size):\n",
-      "    \"\"\"\n",
-      "    Generator that parses a given file.\n",
-      "        :param file_: file to parse.\n",
-      "        :param offset_size: number of bits used for the offset.\n",
-      "        :param index_size: number of bits used for the index.\n",
-      "        :returns: quadruple of the operation (R|W), tag, index and offset.\n",
-      "    \"\"\"\n",
       "    offset_mask = pow(2, offset_size) - 1\n",
       "    index_mask = pow(2, index_size) - 1\n",
       "\n",
@@ -82,7 +78,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "### Running the Simulator\n",
+      "## Running the Simulator\n",
       "\n",
       "Below is the function `set_associative` responsible for running the cache simulator. As arguments it takes the file used, the size of the cache in bytes, the size of the cache block in bytes and the set-associativity. We use Python's dictionary data structure to simulate the cache as well as record the number of misses and the total number of operations. We also use the deque data structure from Python 2.7 for maintaining the set of tags at a particular index of the cache.\n",
       "\n",
@@ -99,14 +95,6 @@
      "collapsed": false,
      "input": [
       "def set_associative(file_, size=4096, block=32, sets=1):\n",
-      "    \"\"\"\n",
-      "    Simulates a set-associative cache.\n",
-      "        :param file_: trace file to be used for simulation.\n",
-      "        :param size: size of the cache in bytes\n",
-      "        :param block: size of a block of memory in bytes.\n",
-      "        :param sets: set-associativity.\n",
-      "        :returns: total number of operations, missed number of operations\n",
-      "    \"\"\"\n",
       "    cache = {}\n",
       "    total = {'R': 0, 'W': 0}\n",
       "    misses = {'R': 0, 'W': 0}\n",
@@ -135,13 +123,13 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 6
+     "prompt_number": 15
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## Experiments and a Critical Summary of the Results"
+      "# Experiments and a Critical Summary of the Results"
      ]
     },
     {
@@ -152,9 +140,7 @@
       "\n",
       "The results of these experiments can be best seen in figure 1 in the appendix (last page). Furthermore, a bar chart of the results for the trace file gcc_memref.out is displayed in figure 2 in the appendix (similar pattern can be observed for mcf_memref.out).\n",
       "\n",
-      "From the results, we can observe that the miss rate gets lower as we increase the cache size and/or the set associativity. This is understandable as increasing the size of the cache means we can store more data in the cache, hence we will reduce the number of conflict misses. Moreover, increased set associativity means that we can store blocks of data in the cache that have the same index but different tags. This also reduces conflict misses.\n",
-      "\n",
-      "Another thing to note, is that the miss rates for mcf_memref.out are much higher than the miss rates of gcc_memref.out. This could be explained by the fact that mcf_memref.out has more unique addresses"
+      "From the results, we can observe that the miss rate gets lower as we increase the cache size and/or the set associativity. This is understandable as increasing the size of the cache means we can have more indices and are able to store more data in the cache, hence we will reduce the number of conflict misses. Moreover, increased set associativity means that we can store blocks of data in the cache that have the same index but different tags. This also reduces conflict misses.\n"
      ]
     }
    ],
