changed | to \vert

--- a/cs_cw1/Computer Security Assignment 1.ipynb
+++ b/cs_cw1/Computer Security Assignment 1.ipynb
@@ -228,7 +228,7 @@
      "source": [
       "### b)\n",
       "\n",
-      "We could fix this issue by adding in `B`'s (the receiver's) identity in the last step of the protocol so that `A` sends `B` $senc(K, Cert_A || sign(pvk(A), <N, B>))$. Thus `M` would not be able to send this message along to `B` pretending to be `A` because it would be his identity included in the signature as a receiver and not `B`'s identity.\n",
+      "We could fix this issue by adding in `B`'s (the receiver's) identity in the last step of the protocol so that `A` sends `B` $senc(K, Cert_A \\vert \\vert sign(pvk(A), <N, B>))$. Thus `M` would not be able to send this message along to `B` pretending to be `A` because it would be his identity included in the signature as a receiver and not `B`'s identity.\n",
       "\n",
       "Furthermore, `M` would not be able to change it to `B`'s identity since the signature is signed by the private key of `A`."
      ]
