commiting uncommited stuff

--- a/car_cw2/car_cw2.ipynb
+++ b/car_cw2/car_cw2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:9d6467da2f7a1f74c2b526a0e65030155266a493cabdb588756574b2c7868ef9"
+  "signature": "sha256:65145285f48266f74791697601519c7fc7e33e47551d5c4a8bc3e02b66e48958"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -36,38 +36,6 @@
      ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "def parse(file_, offset_size, index_size):\n",
-      "    offset_mask = pow(2, offset_size) - 1\n",
-      "    index_mask = pow(2, index_size) - 1\n",
-      "\n",
-      "    for line in file_:\n",
-      "        op, addr = line.split()\n",
-      "        addr = int(addr, 16)\n",
-      "\n",
-      "        # get offset with a bitmask then shift\n",
-      "        offset = addr & offset_mask\n",
-      "        addr = addr >> offset_size\n",
-      "\n",
-      "        # get index with a bitmask then shift\n",
-      "        index = addr & index_mask\n",
-      "        addr = addr >> index_size\n",
-      "\n",
-      "        # now only tag left\n",
-      "        tag = addr\n",
-      "\n",
-      "        yield op, tag, index, offset\n",
-      "\n",
-      "    file_.seek(0)  # reset file pointer"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 5
-    },
-    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
@@ -84,10 +52,44 @@
      ]
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "# Experiments and a Critical Summary of the Results"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "I ran experiments on both files gcc_memref.out and mcf_memref.out with cache size varying from 4KB to 64KB and set associativity varying from 1 to 16, as per the requirements of the assignment. To repeat the experiments just run `cache.py` with appropriate parameters (more information is provided in the readme file).\n",
+      "\n",
+      "The results of these experiments can be best seen in figure 1 in the appendix (last page). Furthermore, a bar chart of the results for the trace file gcc_memref.out is displayed in figure 2 in the appendix (similar pattern can be observed for mcf_memref.out).\n",
+      "\n",
+      "From the results, we can observe that the miss rate gets lower as we increase the cache size and/or the set associativity. This is understandable as increasing the size of the cache means we can have more indices and are able to store more data in the cache, hence we will reduce the number of conflict misses. Moreover, increased set associativity means that we can store blocks of data in the cache that have the same index but different tags. This also reduces conflict misses.\n"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "# Memory addresses are 48 bits long.\n",
+      "# Data in memory is organized in blocks of 32 bytes.\n",
+      "# Assume a write through cache with LRU replacement policy for set associative caches.\n",
+      "from math import log\n",
+      "from argparse import ArgumentParser\n",
+      "from collections import deque\n",
+      "\n",
+      "\n",
       "def set_associative(file_, size=4096, block=32, sets=1):\n",
+      "    \"\"\"\n",
+      "    Simulates a set-associative cache.\n",
+      "        :param file_: trace file to be used for simulation.\n",
+      "        :param size: size of the cache in bytes\n",
+      "        :param block: size of a block of memory in bytes.\n",
+      "        :param sets: set-associativity.\n",
+      "        :returns: total number of operations, missed number of operations\n",
+      "    \"\"\"\n",
       "    cache = {}\n",
       "    total = {'R': 0, 'W': 0}\n",
       "    misses = {'R': 0, 'W': 0}\n",
@@ -111,30 +113,82 @@
       "                cache[index].remove(tag)\n",
       "                cache[index].append(tag)\n",
       "\n",
-      "    return total, misses"
+      "    return total, misses\n",
+      "\n",
+      "\n",
+      "def parse(file_, offset_size, index_size):\n",
+      "    \"\"\"\n",
+      "    Generator that parses a given file.\n",
+      "        :param file_: file to parse.\n",
+      "        :param offset_size: number of bits used for the offset.\n",
+      "        :param index_size: number of bits used for the index.\n",
+      "        :returns: quadruple of the operation (R|W), tag, index and offset.\n",
+      "    \"\"\"\n",
+      "    offset_mask = pow(2, offset_size) - 1\n",
+      "    index_mask = pow(2, index_size) - 1\n",
+      "\n",
+      "    for line in file_:\n",
+      "        op, addr = line.split()\n",
+      "        addr = int(addr, 16)\n",
+      "\n",
+      "        # get offset with a bitmask then shift\n",
+      "        offset = addr & offset_mask\n",
+      "        addr = addr >> offset_size\n",
+      "\n",
+      "        # get index with a bitmask then shift\n",
+      "        index = addr & index_mask\n",
+      "        addr = addr >> index_size\n",
+      "\n",
+      "        # now only tag left\n",
+      "        tag = addr\n",
+      "\n",
+      "        yield op, tag, index, offset\n",
+      "\n",
+      "    file_.seek(0)  # reset file pointer\n",
+      "\n",
+      "\n",
+      "def main(filename=None, **kwargs):\n",
+      "    with open(filename) as file_:\n",
+      "        total, misses = set_associative(file_, **kwargs)\n",
+      "        total_sum = sum(total.itervalues())\n",
+      "        misses_sum = sum(misses.itervalues())\n",
+      "        print('Total Miss Rate: {:.4%}'.format(misses_sum / float(total_sum)))\n",
+      "        print('Read Miss Rate: {:.4%}'.format(misses['R'] / float(total['R'])))\n",
+      "        print('Write Miss Rate: {:.4%}'.format(misses['W'] / float(total['W'])))\n",
+      "\n",
+      "\n",
+      "if __name__ == '__main__':\n",
+      "    parser = ArgumentParser(description='Run a cache simulator on a given trace file.')\n",
+      "    parser.add_argument(\n",
+      "        'filename',\n",
+      "        metavar='tracefile',\n",
+      "        type=str,\n",
+      "        help='Path of the file to process.',\n",
+      "    )\n",
+      "    parser.add_argument(\n",
+      "        '--size',\n",
+      "        type=int,\n",
+      "        default=4096,\n",
+      "        help='Size of the cache in bytes.'\n",
+      "    )\n",
+      "    parser.add_argument(\n",
+      "        '--block',\n",
+      "        type=int,\n",
+      "        default=32,\n",
+      "        help='Size of a block in bytes.'\n",
+      "    )\n",
+      "    parser.add_argument(\n",
+      "        '--sets',\n",
+      "        type=int,\n",
+      "        default=1,\n",
+      "        help='Number of sets in the set-associative cache.'\n",
+      "    )\n",
+      "    args = vars(parser.parse_args())\n",
+      "    main(**args)\n"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 15
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "# Experiments and a Critical Summary of the Results"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "I ran experiments on both files gcc_memref.out and mcf_memref.out with cache size varying from 4KB to 64KB and set associativity varying from 1 to 16, as per the requirements of the assignment. To repeat the experiments just run `cache.py` with appropriate parameters (more information is provided in the readme file).\n",
-      "\n",
-      "The results of these experiments can be best seen in figure 1 in the appendix (last page). Furthermore, a bar chart of the results for the trace file gcc_memref.out is displayed in figure 2 in the appendix (similar pattern can be observed for mcf_memref.out).\n",
-      "\n",
-      "From the results, we can observe that the miss rate gets lower as we increase the cache size and/or the set associativity. This is understandable as increasing the size of the cache means we can have more indices and are able to store more data in the cache, hence we will reduce the number of conflict misses. Moreover, increased set associativity means that we can store blocks of data in the cache that have the same index but different tags. This also reduces conflict misses.\n"
-     ]
+     "outputs": []
     }
    ],
    "metadata": {}
