--- a/sdp/template.tex
+++ b/sdp/template.tex
@@ -48,10 +48,10 @@ $endif$
 \usepackage{sectsty}
 \usepackage{titlesec}
 
-\sectionfont{\fontsize{18pt}{0}\selectfont}
-\subsectionfont{\fontsize{11pt}{0}\selectfont}
+\sectionfont{\fontsize{14pt}{0}\selectfont}
+% \subsectionfont{\fontsize{11pt}{0}\selectfont}
 
-% \titlespacing\section{0pt}{14pt plus 4pt minus 2pt}{0pt plus 0pt minus 0pt}
+\titlespacing\section{0pt}{14pt plus 4pt minus 2pt}{0pt plus 0pt minus 0pt}
 
 $if(geometry)$
 \usepackage[$for(geometry)$$geometry$$sep$,$endfor$]{geometry}
